--- a/ui/package.json
+++ b/ui/package.json
@@ -18,22 +18,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/material": "^5.10.15",
+    "@mui/x-data-grid": "^5.17.14",
+    "chart.js": "^2.9.4",
     "express": "^4.17.1",
+    "hamburger-react": "^2.5.0",
     "isomorphic-unfetch": "^3.1.0",
+    "mui-datatables": "^4.2.2",
     "next": "^10.0.8",
     "next-cookies": "^2.0.3",
     "next-images": "^1.7.0",
+    "papaparse": "^5.3.2",
     "pm2": "^4.5.5",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-animated-checkbox": "^0.1.4",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
-    "universal-cookie": "^4.0.4"
+    "react-string-replace": "^1.1.0",
+    "react-toast": "^1.0.3",
+    "react-toastify": "^9.1.1",
+    "universal-cookie": "^4.0.4",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
-
